# deadpush

./: .claudeignore  .gitignore  AGENT.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  action.yml  deadpush_bootstrap.py  pyproject.toml
.github/actions/scan/: action.yml
.github/workflows/: ci.yml  python-publish.yml  release.yml
Formula/: deadpush.rb
deadgraph/: cli.py  config.py  debris.py  entrypoints.py  graph.py  guard.py  hooks.py  reachability.py  sarif.py  ui.py
deadgraph/languages/: base.py  cpp.py  go_.py  python_.py  rust.py  typescript.py
deadpush/: audit.py  bootstrap.py  churn.py  cli.py  comments.py  complexity.py  config.py  configure.py  crawler.py  deadness.py  debris.py  deps.py  deps_guard.py  entrypoints.py  git_escape.py  git_wrapper.py  gpc.py  gpc_session.py  graph.py  guard.py  hooks.py  hub.py  importgraph.py  imports.py  intercept.py  layers.py  mcp_proxy.py  mcp_server.py  mcp_suspend.py  plugins.py  reachability.py  registration.py  report.py  rules.py  run_session.py  sarif.py  scorer.py  security.py  session.py  state.py  (+5 more)
deadpush/backends/: __init__.py  base.py  linux.py  noop.py  seatbelt.py
deadpush/languages/: __init__.py  java.py  javascript.py  python_.py
docs/: agent-gpc-integration.md  comparison.md  github-setup.md  gpc-protocol.md  guarantees.md  macos-t2-max-es.md
docs/server-side/: pre-receive.md
examples/github/: deadpush.yml
examples/server-side/: pre-receive
schemas/: rules.v2.schema.json
scripts/: brew_release.sh  deadpush  dev_install.sh  full_e2e_test.py  hardened_qa.sh  scaffold_opencode_demo.sh  soak_test.py  stress_test.py
tests/: conftest.py  test_attack_chain.py  test_audit.py  test_bootstrap.py  test_bootstrap_guard.py  test_comments.py  test_configure.py  test_configure_all.py  test_deps_guard.py  test_dev_repo_guard.py  test_example_plugin.py  test_exhaustive.py  test_failclosed.py  test_fanotify_deny.py  test_file_coverage.py  test_git_escape.py  test_git_wrapper.py  test_git_wrapper_sandbox.py  test_gpc.py  test_gpc_session.py  test_guard_parallel_threadsafe.py  test_guardian_closed_loop.py  test_guardian_fanotify.py  test_hardened.py  test_hook_integrity_loop.py  test_hooks_enforcement.py  test_hookspath_hijack.py  test_hub.py  test_integration_lifecycle.py  test_intercept_guardrails.py  test_layers.py  test_mcp.py  test_mcp_proxy.py  test_mcp_proxy_e2e.py  test_mcp_suspend.py  test_move_delete_events.py  test_noop_backend.py  test_os_hardening.py  test_out_of_band_commit.py  test_plugins.py  (+16 more)
tests/fixtures/: mock_mcp_downstream.py  ts_demo.ts
