[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "deadpush"
version = "0.2.0"
description = "Guardrails for the vibe coding era — reachability-based dead code detection + semantic debris detection with pre-push git hooks"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Harris Ahmad", email = "harris@deadpush.dev"}
]
keywords = ["dead-code", "static-analysis", "call-graph", "reachability", "debris-detection", "git-hook", "llm", "ai-coding"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "click>=8.1.7",
    "tree-sitter>=0.23.0",
    "tree-sitter-python>=0.23.0",
    "tree-sitter-typescript>=0.23.0",
    "tree-sitter-go>=0.23.0",
    "tree-sitter-rust>=0.23.0",
    "tree-sitter-cpp>=0.23.0",
    "tree-sitter-javascript>=0.23.0",
    "tree-sitter-java>=0.23.0",
    "pathspec>=0.12.1",
]

[project.optional-dependencies]
rich = ["rich>=13.7.0"]
anthropic = ["anthropic>=0.45.0"]
watch = ["watchdog>=4.0.0"]
dev = ["pytest>=8.0", "ruff>=0.4", "rich>=13.7.0", "watchdog>=4.0.0"]

[project.scripts]
deadpush = "deadpush.cli:main"

[project.urls]
Homepage = "https://github.com/harris-ahmad/deadpush"
Source = "https://github.com/harris-ahmad/deadpush"
"Bug Tracker" = "https://github.com/harris-ahmad/deadpush/issues"
Documentation = "https://github.com/harris-ahmad/deadpush#readme"

[tool.hatch.build.targets.wheel]
packages = ["deadpush"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q"
filterwarnings = [
    "ignore::pytest.PytestCollectionWarning",
]