[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "deadpush"
version = "0.2.1"
description = "Guardrails for the vibe coding era — real-time AI agent guardian with MCP write interception, git hooks, and quarantine"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Harris Ahmad", email = "harris@deadpush.dev"}
]
keywords = ["guardrails", "git-hook", "llm", "ai-coding", "mcp", "security", "quarantine"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "click>=8.1.7",
    "pathspec>=0.12.1",
    "watchdog>=4.0.0",
]

[project.optional-dependencies]
rich = ["rich>=13.7.0"]
anthropic = ["anthropic>=0.45.0"]
dev = ["pytest>=8.0", "ruff>=0.4", "rich>=13.7.0", "watchdog>=4.0.0"]

[project.scripts]
deadpush = "deadpush_bootstrap:main"

[project.urls]
Homepage = "https://github.com/harris-ahmad/deadpush"
Source = "https://github.com/harris-ahmad/deadpush"
"Bug Tracker" = "https://github.com/harris-ahmad/deadpush/issues"
Documentation = "https://github.com/harris-ahmad/deadpush#readme"

[tool.hatch.build.targets.wheel]
packages = ["deadpush"]

[tool.hatch.build.targets.wheel.force-include]
"deadpush_bootstrap.py" = "deadpush_bootstrap.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q"
filterwarnings = [
    "ignore::pytest.PytestCollectionWarning",
]