[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "deadpush"
dynamic = ["version"]
description = "Guardrails for the vibe coding era — repo integrity guardian with MCP proxy, sandbox sessions, git hooks, and provable guarantee tiers"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Harris Ahmad", email = "harris@deadpush.dev"}
]
keywords = ["guardrails", "git-hook", "llm", "ai-coding", "mcp", "security", "quarantine"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "click>=8.1.7",
    "pathspec>=0.12.1",
    "watchdog>=4.0.0",
]

[project.optional-dependencies]
rich = ["rich>=13.7.0"]
anthropic = ["anthropic>=0.45.0"]
dev = ["pytest>=8.0", "ruff>=0.4", "rich>=13.7.0", "watchdog>=4.0.0"]

[project.scripts]
deadpush = "deadpush_bootstrap:main"

[project.entry-points."deadpush.guardrails"]
# Register third-party guardrail plugins:
# my_rules = "my_package.guardrails:MyPlugin"

[project.urls]
Homepage = "https://github.com/harris-ahmad/deadpush"
Source = "https://github.com/harris-ahmad/deadpush"
"Bug Tracker" = "https://github.com/harris-ahmad/deadpush/issues"
Documentation = "https://github.com/harris-ahmad/deadpush#readme"

[tool.hatch.version]
# Single source of truth: deadpush/__init__.py __version__.
# pyproject metadata and `deadpush.__version__` can never drift.
path = "deadpush/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["deadpush"]

[tool.hatch.build.targets.wheel.force-include]
"deadpush_bootstrap.py" = "deadpush_bootstrap.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q"
filterwarnings = [
    "ignore::pytest.PytestCollectionWarning",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = [
    "E501",  # line length is enforced softly, not as a hard gate
]

[tool.ruff.lint.per-file-ignores]
# Tests and one-off scripts often bind intermediate results for readability;
# unused locals there are intentional and not a correctness signal.
"tests/*" = ["F841", "E741"]
"scripts/*" = ["F841"]